k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meeting
  template:
    metadata:
      labels:
        app: meeting
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: meeting-c
          image: mos1ck/meeting:1.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /_info
              port: 8080
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /_info
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
