k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meeting-service
spec:
  selector:
    app: meeting
  ports:
    - port: 80
